--- a/source/pug/includes/page-home_indice_tematico.pug
+++ b/source/pug/includes/page-home_indice_tematico.pug
@@ -11,6 +11,6 @@ h2 Desarrollo de <br>contenidos
 
                 ul.list-group.list-group-flush.list.my-n3.nav-temas
                     +navTemaItem('1', 'Introducción', 'main.html#pages/1-tema.html/')
-                    +navTemaItem('2', 'Organizaciones', 'main.html#pages/organizaciones/')
-                    +navTemaItem('3', 'Sistemas de Información', 'main.html#pages/sistemas-de-informacion/')
-                    +navTemaItem('4', 'Procesamiento de Datos', 'main.html#pages/procesamiento-de-datos/')
+                    +navTemaItem('2', 'Organizaciones', 'main.html#page/organizaciones/')
+                    +navTemaItem('3', 'Sistemas de Información', 'main.html#page/sistemas-de-informacion/')
+                    +navTemaItem('4', 'Procesamiento de Datos', 'main.html#page/procesamiento-de-datos/')
