--- a/source/pug/index.pug
+++ b/source/pug/index.pug
@@ -6,7 +6,7 @@ html(lang="es")
         include includes/head.pug
 
 
-    body#page-home.theme-ligth.page-header-textura
+    body#page-home.theme-dark.page-header-textura
 
         header#CursoPresentacion.curso-presentacion.page-header
 
