--- a/source/pug/pages/4-tema.pug
+++ b/source/pug/pages/4-tema.pug
@@ -1,3 +1,220 @@
 include ../mixins/functions
 
 +pageHeader('Aspectos y características de los Sistemas de Información', 'assets/images/header/header_media.svg')
+
+.container
+    .header-ecored
+        h1 4. Procesamiento de Datos
+    .header
+        .card
+            .card-body
+                .row.my-4
+                    .col-12.col-md-5
+                        p El procesamiento de datos hace referencia a la manipulación adecuada de los datos, de forma que generen información objetiva y útil a la organización, para su mejora y continua evaluación. De acuerdo a la actividad y al tamaño de las empresas, el volumen de datos varía, así mismo es la forma de captura y registro, estos en la actualidad están soportados por los grandes avances de la tecnología, la cual disminuye las limitaciones de espacio y tiempo, ya que no es necesario estar junto a un equipo de cómputo para registrar los datos efectivamente.
+                        br
+                        p El procesamiento de datos se da de una forma cíclica, la cual la componen las siguientes etapas: origen, registro, preparación, comunicación y almacenamiento de datos.
+
+                    .col-12-col-md-6.text-center.ml-3
+                        img(src="assets/images/pages/ilustraciones/procesamiento.svg").img-fluid
+    #origen
+    .header-ecored
+        h1 4.1 Origen y registro de Datos
+    .header
+        .card
+            .card-body
+                .row.my-4
+                    .col-12.col-md-5
+                        p En cuanto al origen de los datos, este varía según la naturaleza y son conocidos como documentos fuente, de igual forma pueden estar de forma escrita, por medio de símbolos o gráficos, tales pueden ser una solicitud de pedido, una factura de compra venta, un reporte de inventario, entre otros; sea cual sea el medio en el cual se contenga los datos, es conveniente establecer y seguir un método de custodiar los datos para garantizar su integridad e impedir la manipulación indebida. 
+
+                    .col-12-col-md-6.text-center.ml-3
+                        img(src="assets/images/pages/ilustraciones/procesamiento2.svg").img-fluid
+        .card
+            .card-body
+                p El registro de los datos se relaciona con el soporte y su medio (datos consignados), esta acción denomina el seguimiento de un proceso que debe ser sistemático y que debe cumplirse para consignar los datos en un medio, editarlos, codificarlos y clasificarlos.
+                br
+                p Las etapas en la función del registro de datos son los siguientes: 
+
+            .row.justify-content-center.align-items-center.mx-3(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Edición
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p La conversión es necesaria cuando se requiere que un dato pase de un tipo o unidad de clasificación a otro. Este proceso se da según la naturaleza y fuente de los mismos y existen herramientas matemáticas y fórmulas que permiten que estas acciones se obtengan para un mejor tratamiento de los mismos.
+
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Codificación
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p Transformar en una manera sistemática para ordenar de mejor manera los datos, que posteriormente pasarán a registro y proceso, naturalmente se codifican para tener una visión clara de los grupos, clases y de los datos, para su fácil identificación.
+
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Clasificación
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p Es la acción de determinar uno o más atributos comunes que se toman para seleccionar y agrupar un conjunto de datos que aporta significancia al proceso y tratamiento de los datos.
+
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Conversión
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p La conversión es necesaria cuando se requiere que un dato pase de un tipo o unidad de clasificación a otro. Este proceso se da según la naturaleza y fuente de los mismos y existen herramientas matemáticas y fórmulas que permiten que estas acciones se obtengan para un mejor tratamiento de los mismos.
+
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Copia y duplicación
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p Esta acción permite adquirir facsímiles de los datos, que se pueden seleccionar para distribuirlos a más de un usuario final o para agruparlos en diferentes pasos del ciclo de procesamiento. 
+
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Verificación
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p Esta acción es de mucha importancia para el resultado final y nos permite tener una fiabilidad de los resultados; en esencia, nos asegura que los datos tienen una fiel validez desde su captura o su toma dependiendo del medio de cómo se tome; sin embargo, lo que se busca es disminuir el error o el sesgo en la manipulación de los datos y sean los que se requieren según la muestra.
+
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Comparación y análisis
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p Estos procesos muestran qué factores determinan el destino, tratamiento y aplicabilidad de los datos; existen atributos, tales como, el orden, naturaleza, proporción, relación, similitud o valor relativo de los datos. 
+
+            .row.justify-content-center.align-items-center.mx-3.mt-5.mb-3(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Cálculo
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p Procesamiento aritmético de las operaciones básicas de las matemáticas y álgebra, además son necesarias para el proceso de conversión a una manera más efectiva y válida en el proceso del manejo de los datos.
+    #estrategias
+    .header-ecored
+        h1 4.2 Preparación de reportes, comunicación y almacenamiento de datos
+    .header  
+         .card
+            .card-body
+                p El registro de los datos se relaciona con el soporte y su medio (datos consignados), esta acción denomina el seguimiento de un proceso que debe ser sistemático y que debe cumplirse para consignar los datos en un medio, editarlos, codificarlos y clasificarlos.
+                br
+                p Las etapas en la función del registro de datos son los siguientes: 
+
+            .row.justify-content-center.align-items-center.mx-3(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Preparación de reportes
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p estos deben ser preparados de forma eficiente con el fin de garantizar la confiabilidad de la información que se generará. Un claro ejemplo de esto, son los reportes de inventarios, reporte de ventas mensual, el reporte de despacho de mercancía a un determinado lugar, todo esto le permitirá a la organización, evaluar el estado de la operación. 
+
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Comunicación de los datos
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p Para realizar una adecuada comunicación de los datos es necesario utilizar medios por los cuales se pueda mostrar de forma clara, precisa y dinámica, con el fin de que el receptor tenga la misma percepción de la información de quien la preparo, de igual forma para que sea más entendible hay que tratarla y analizarla. 
+
+            .row.justify-content-center.align-items-center.mx-3.mt-5.mb-3(style="border-radius: 10px; background-color:#B2D1F2;")
+
+                .col-2.justify-content-center.align-items-center
+
+                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+
+                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+
+                    p(style="padding-top: 2%") 
+                        
+                        strong Almacenamiento de datos
+
+                    hr(style="border: 1px solid #8EB5E1")
+
+                    p En esta etapa, es muy importante los protocolos que establezca la organización para proveer medios de almacenamiento confiable y con medidas de seguridad comprobadas, ya que en ella puede encontrarse proyectos de innovación en el sector, fórmulas para la fabricación de un producto o un nuevo desarrollo, y es necesario salvaguardar la información que puede generar una ventaja competitiva en el mercado. 
