Se termina la programación y carga de contenidos

--- a/source/pug/pages/referencias.pug
+++ b/source/pug/pages/referencias.pug
@@ -4,17 +4,68 @@
 
     li
       p 
-        | Ghyka, M. C., & Bousquet, J. B. (1953). 
-        i Estética de las proporciones en la naturaleza y en las artes. 
-        | Buenos Aires: Poseidón.
+        | Almacenamiento, 
+        i centros de distribución y operaciones. 
+        | (s.f.). 
+        a(href="https://d2vvqscadf4c1f.cloudfront.net/BKFpa0v7Sh2nejFSyoNW_Almacenamiento.pdf", target="_blank") https://d2vvqscadf4c1f.cloudfront.net/BKFpa0v7Sh2nejFSyoNW_Almacenamiento.pdf
 
     li
       p 
-        | Ghyka, M. C., & Bousquet, J. B. (1953). 
-        i Estética de las proporciones en la naturaleza y en las artes. 
-        | Buenos Aires: Poseidón.
+        | Díaz, L. (2013). 
+        i Sistemas de información en la empresa. 
+        | Universidad de Alcalá Servicio de Publicaciones.  
 
     li
       p 
-        | Directrices De La OMS. Sobre Higiene De Las Manos En La Atención Sanitaria .2011. 
-        a(href="http://www.who.int/patientsafety/information_centre/Spanish_HH_Guidelines ", target="_blank") http://www.who.int/patientsafety/information_centre/Spanish_HH_Guidelines 
+        | Escalante, K. (2009).  
+        i Estrategias Competitivas. 
+        | El Cid Editor.
+
+    li
+      p 
+        | González, F. (2007).
+        i Introducción a los sistemas de información: fundamentos.
+        a(href="https://www.uv.mx/personal/artulopez/files/2012/08/FundamentosSistemasInformacion.pdf", target="_blank") https://www.uv.mx/personal/artulopez/files/2012/08/FundamentosSistemasInformacion.pdf
+        
+    li
+      p 
+        | Londoño, J. (s.f.). 
+        a(href="https://campusvirtual.univalle.edu.co/moodle/pluginfile.php/443555/mod_resource/content/1/ALMACENAMIENTO.pdf", target="_blank") https://campusvirtual.univalle.edu.co/moodle/pluginfile.php/443555/mod_resource/content/1/ALMACENAMIENTO.pdf
+
+    li
+      p 
+        | Almacenamiento, 
+        i centros de distribución y operaciones. 
+        | (s.f.). 
+        a(href="https://d2vvqscadf4c1f.cloudfront.net/BKFpa0v7Sh2nejFSyoNW_Almacenamiento.pdf", target="_blank") https://d2vvqscadf4c1f.cloudfront.net/BKFpa0v7Sh2nejFSyoNW_Almacenamiento.pdf
+
+    li
+      p 
+        | Marco, J., Marco, M., Macau, R., Pastor, J., Rodríguez, J., Guitart, I. (2013).
+        i Sistemas de información (en las organizaciones). 
+        | Editorial UOC.
+
+    li
+      p 
+        | Mora, L. (2011).  
+        i Gestión logística en centros de distribución, bodegas y almacenes, 
+        | Ecoe Ediciones.
+
+    li
+      p 
+        | Porter, M. (1991).  
+        i Estrategia competitiva. 
+        | Editorial Continental.
+        
+    li
+      p 
+        | Real Academia Española. (2001). Competitiva. En el 
+        i diccionario de la lengua española. 
+        a(href="https://dle.rae.es/?w=competitivo", target="_blank") https://dle.rae.es/?w=competitivo
+
+    li
+      p 
+        | Real Academia Española. (2001). Estrategia. 
+        i En el diccionario de la lengua española. 
+        a(href="https://dle.rae.es/?w=estrategia", target="_blank") https://dle.rae.es/?w=estrategia               
+                        
