--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -47,25 +47,17 @@ mixin creditosFooter(ruta)
                     h3.footer-subtitulo Contenido Instruccional
 
                     p.footer-texto
-                        | #[strong Nombre completo ]<br/>   
-                        | #[strong Nombre completo ]<br/>                  
-                        span.text-small Instructores<br/>
-
-                    p.footer-texto
-                        | #[strong Nombre completo ]<br/>   
-                        | #[strong Nombre completo ]<br/>                  
+                        | #[strong Elizabeth Mena Rengifo ]<br/>   
+                        | #[strong Rachman Bustillo Martínez]<br/>
+                        | #[strong Érika Alejandra Beltrán Cuesta ]<br/> 
+                        | #[strong Maritza Paz Calderón ]<br/> 
+                        | #[strong Rafael Neftalí Lizcano Reyes. ]<br/>                     
                         span.text-small Diseño instruccional<br/>
 
 
                     p.footer-texto
                         | #[strong Gloria Lee ]<br/>   
                         span.text-small Responsable del equipo<br/>
-
-                    p.footer-texto
-                        span.text-small.text-uppercase Nombre del Centro 
-                        br
-                        span.text-small Ubicación
-
                         
                 .col-12.col-md-5
                     h3.footer-subtitulo Diseño y desarrollo de recursos educativos digitales
