Ajuste de iconos

--- a/source/pug/pages/4-tema.pug
+++ b/source/pug/pages/4-tema.pug
@@ -34,13 +34,13 @@ include ../mixins/functions
                 br
                 p Las etapas en la función del registro de datos son los siguientes: 
 
-            .row.justify-content-center.align-items-center.mx-3(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso1.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -50,13 +50,13 @@ include ../mixins/functions
 
                     p La conversión es necesaria cuando se requiere que un dato pase de un tipo o unidad de clasificación a otro. Este proceso se da según la naturaleza y fuente de los mismos y existen herramientas matemáticas y fórmulas que permiten que estas acciones se obtengan para un mejor tratamiento de los mismos.
 
-            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso2.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -66,13 +66,13 @@ include ../mixins/functions
 
                     p Transformar en una manera sistemática para ordenar de mejor manera los datos, que posteriormente pasarán a registro y proceso, naturalmente se codifican para tener una visión clara de los grupos, clases y de los datos, para su fácil identificación.
 
-            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso3.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -82,13 +82,13 @@ include ../mixins/functions
 
                     p Es la acción de determinar uno o más atributos comunes que se toman para seleccionar y agrupar un conjunto de datos que aporta significancia al proceso y tratamiento de los datos.
 
-            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso4.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -98,13 +98,13 @@ include ../mixins/functions
 
                     p La conversión es necesaria cuando se requiere que un dato pase de un tipo o unidad de clasificación a otro. Este proceso se da según la naturaleza y fuente de los mismos y existen herramientas matemáticas y fórmulas que permiten que estas acciones se obtengan para un mejor tratamiento de los mismos.
 
-            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso5.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -114,13 +114,13 @@ include ../mixins/functions
 
                     p Esta acción permite adquirir facsímiles de los datos, que se pueden seleccionar para distribuirlos a más de un usuario final o para agruparlos en diferentes pasos del ciclo de procesamiento. 
 
-            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso6.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -130,13 +130,13 @@ include ../mixins/functions
 
                     p Esta acción es de mucha importancia para el resultado final y nos permite tener una fiabilidad de los resultados; en esencia, nos asegura que los datos tienen una fiel validez desde su captura o su toma dependiendo del medio de cómo se tome; sin embargo, lo que se busca es disminuir el error o el sesgo en la manipulación de los datos y sean los que se requieren según la muestra.
 
-            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso7.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -146,13 +146,13 @@ include ../mixins/functions
 
                     p Estos procesos muestran qué factores determinan el destino, tratamiento y aplicabilidad de los datos; existen atributos, tales como, el orden, naturaleza, proporción, relación, similitud o valor relativo de los datos. 
 
-            .row.justify-content-center.align-items-center.mx-3.mt-5.mb-3(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3.mt-5.mb-3(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso8.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -171,13 +171,13 @@ include ../mixins/functions
                 br
                 p Las etapas en la función del registro de datos son los siguientes: 
 
-            .row.justify-content-center.align-items-center.mx-3(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso9.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -187,13 +187,13 @@ include ../mixins/functions
 
                     p estos deben ser preparados de forma eficiente con el fin de garantizar la confiabilidad de la información que se generará. Un claro ejemplo de esto, son los reportes de inventarios, reporte de ventas mensual, el reporte de despacho de mercancía a un determinado lugar, todo esto le permitirá a la organización, evaluar el estado de la operación. 
 
-            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3.mt-5(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso10.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
@@ -203,13 +203,13 @@ include ../mixins/functions
 
                     p Para realizar una adecuada comunicación de los datos es necesario utilizar medios por los cuales se pueda mostrar de forma clara, precisa y dinámica, con el fin de que el receptor tenga la misma percepción de la información de quien la preparo, de igual forma para que sea más entendible hay que tratarla y analizarla. 
 
-            .row.justify-content-center.align-items-center.mx-3.mt-5.mb-3(style="border-radius: 10px; background-color:#B2D1F2;")
+            .row.justify-content-center.align-items-center.mx-3.mt-5.mb-3(style="border-radius: 10px; background-color:#C3E7F9;")
 
                 .col-2.justify-content-center.align-items-center
 
-                        img(src="assets/images/pages/ilustraciones/conceptos3.svg", style="width: 60%").rounded.mx-auto.d-block
+                        img(src="assets/images/pages/ilustraciones/Recurso11.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#D3E7FF; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
 
                     p(style="padding-top: 2%") 
                         
