Se ajusta el codigo y corrige mayuscula en creditos

--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -69,8 +69,8 @@ include ../mixins/functions
                 img(src="assets/images/pages/ilustraciones/sistema_logistico.svg").img-fluid.col-12     
 
         .card(style="background-color:#94E3EC")
-            img(src="assets/images/pages/ilustraciones/actividades.svg" style= "margin-top: -4px")
-            .col-12.col-md-8.mt-5 
+            img(src="assets/images/pages/ilustraciones/actividades.svg" style= "margin-top: -4px").img-fluid       
+            .col-11.col-md-8.mt-5 
                 article.custom-item.d-flex.align-items-center.flex-column.flex-md-row
 
                     img(src="assets/images/pages/ilustraciones/actividades1.svg").custom-item-img.my-2
@@ -129,7 +129,7 @@ include ../mixins/functions
                                     strong Procesos de Salida: 
                                     |está compuesto por las actividades al final del flujo dentro del centro, tales como el Picking, empaque y embarque. 
 
-                img(src="assets/images/pages/ilustraciones/actividades_secuenciales.svg").img-fluid.col-12
+                img(src="assets/images/pages/ilustraciones/actividades_secuenciales.svg").img-fluid.col-11
 
 #estrategias
 .container
@@ -150,7 +150,7 @@ include ../mixins/functions
                     .col-12-col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/estrategias2.svg").img-fluid                
                     .col-12.col-md-4
-                        p Tal como se muestra en la anterior gráfica, y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos, puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa. 
+                        p.ml-3 Tal como se muestra en la anterior gráfica, y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos, puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa. 
 
         .py-3(style="background-color:#D4F4F7; border-radius:9px")
             .row
