--- a/source/pug/pages/4-tema.pug
+++ b/source/pug/pages/4-tema.pug
@@ -40,7 +40,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso1.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -56,7 +56,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso2.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -72,7 +72,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso3.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -88,7 +88,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso4.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -104,7 +104,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso5.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -120,7 +120,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso6.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -136,7 +136,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso7.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -152,7 +152,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso8.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -177,7 +177,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso9.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -193,7 +193,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso10.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
@@ -209,7 +209,7 @@ include ../mixins/functions
 
                         img(src="assets/images/pages/ilustraciones/Recurso11.svg", style="width: 60%").rounded.mx-auto.d-block
 
-                .col-10(style="background-color:#DCF1FB; border-top-right-radius: 10px; border-bottom-right-radius: 10px")
+                .col-10(style="background-color:#DCF1FB; border-radius: 0px 10px 10px 0px")
 
                     p(style="padding-top: 2%") 
                         
