--- a/source/pug/mixins/functions.pug
+++ b/source/pug/mixins/functions.pug
@@ -16,10 +16,13 @@ mixin pageHeader(tituloTema, srcImagen)
                         span.badge.badge-pill.badge-light.mr-2 #Sistemasdeinformación
                         span.badge.badge-pill.badge-light.mr-2 #organizaciones
 
+                    .barra-dots.mt-5
+
+                        img(src='../assets/images/header/icon_dots.svg').img-fluid    
 
                 .col-12.col-lg-6
                     .d-none.d-lg-block
-                        img(src= srcImagen)
+                        img(src= srcImagen style="max-width:80%")
 
 mixin navTemaItem(numero, titulo, ruta)
     li.list-group-item.nav-tema-item
