--- a/source/pug/pages/4-tema.pug
+++ b/source/pug/pages/4-tema.pug
@@ -4,7 +4,7 @@ include ../mixins/functions
 
 .container
     .header-ecored
-        h1 3. Procesamiento de Datos
+        h1 3. Procesamiento de datos
     .header
         .card
             .card-body
@@ -14,11 +14,11 @@ include ../mixins/functions
                         br
                         p El procesamiento de datos se da de una forma cíclica, la cual la componen las siguientes etapas: origen, registro, preparación, comunicación y almacenamiento de datos.
 
-                    .col-12-col-md-6.text-center.ml-3
-                        img(src="assets/images/pages/ilustraciones/procesamiento.svg").img-fluid
+                    .col-12.col-md-6.text-center.ml-3
+                        img(src="assets/images/pages/ilustraciones/procesamiento.png").img-fluid
     #origen
     .header-ecored
-        h1 3.1 Origen y registro de Datos
+        h1 3.1 Origen y registro de datos
     .header
         .card
             .card-body
@@ -26,8 +26,8 @@ include ../mixins/functions
                     .col-12.col-md-5
                         p En cuanto al origen de los datos, este varía según la naturaleza y son conocidos como documentos fuente, de igual forma pueden estar de forma escrita, por medio de símbolos o gráficos, tales pueden ser una solicitud de pedido, una factura de compra venta, un reporte de inventario, entre otros; sea cual sea el medio en el cual se contenga los datos, es conveniente establecer y seguir un método de custodiar los datos para garantizar su integridad e impedir la manipulación indebida. 
 
-                    .col-12-col-md-6.text-center.ml-3
-                        img(src="assets/images/pages/ilustraciones/procesamiento2.svg").img-fluid
+                    .col-12.col-md-6.text-center.ml-3
+                        img(src="assets/images/pages/ilustraciones/procesamiento2.png").img-fluid
         .card
             .card-body
                 p El registro de los datos se relaciona con el soporte y su medio (datos consignados), esta acción denomina el seguimiento de un proceso que debe ser sistemático y que debe cumplirse para consignar los datos en un medio, editarlos, codificarlos y clasificarlos.
