--- a/source/pug/includes/page-home_topbar.pug
+++ b/source/pug/includes/page-home_topbar.pug
@@ -14,12 +14,12 @@
 
             li.curso-topbar__item
                 a.curso-topbar__link(href="#ResultadosAprendizaje")
-                    span Resultados de Aprendizaje
+                    span(style="color:white") Resultados de Aprendizaje
 
             li.curso-topbar__item
                 a.curso-topbar__link(href="#IndiceTematico")
-                    span Indice Temático
+                    span(style="color:white") Indice Temático
 
             li.curso-topbar__item
                 a.curso-topbar__link(href="#Creditos")
-                    span Créditos
+                    span(style="color:white") Créditos
