--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -9,12 +9,12 @@ include ../mixins/functions
         .card
             .card-body
                 .row.my-4
-                    .col-12.col-md-6
+                    .col-12.col-md-5
                         p Las organizaciones en un contexto comercial, hace relación a un conjunto de personas, recursos y medios organizados de forma intencional y planificada, enfocada a lograr un mismo objetivo, económico o social. Este concepto es muy similar a término empresa, la cual está enfocado específicamente con la rentabilidad y sostenibilidad en un mercado, por ende, la generación de riqueza. 
 
                         p.mt-4 Según la Guía de Responsabilidad Social ISO 26000 de ICONTEC, define la organización como una entidad o grupo de personas e instalaciones con responsabilidad, autoridades y relaciones establecidas y objetivos identificables. 
 
-                    .col-12-col-md-6.text-center.ml-3
+                    .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/recursos.svg").img-fluid
 
                 p La gráfica complementa la última definición, ya que esta muestra las relaciones que se establecen entre los recursos, cada uno tiene una responsabilidad dentro de la organización, ya sea proveer un servicio o producto, gestionar la información, transformar una materia prima o generar valor.
@@ -23,11 +23,11 @@ include ../mixins/functions
 
                 img(src="assets/images/pages/ilustraciones/recursos_mapa.svg").img-fluid.mt-6
 
-                img(src="assets/images/pages/ilustraciones/recursos_img.svg").img-fluid.mt-6
+                img(src="assets/images/pages/ilustraciones/recursos_img.png").img-fluid.mt-6
 #centros
 .container
     .header-ecored
-        h1 1.1 Centros de Distibución
+        h1 1.1 Centros de distibución
     .header
         .card
             .card-body                
@@ -35,7 +35,7 @@ include ../mixins/functions
                     .col-12.col-md-5
                         p Algunas empresas cuentan con Centros de Distribución, los cuales son espacios planificados para ubicar, mantener y manipular mercancías y materiales (Mora, 2011). Las actividades que se desarrollan son diferentes de acuerdo con el tipo de operación; sin embargo, estas se complementan dado que funcionan como un sistema, con entradas, salidas y controles de procesos e información. En esta definición aplican diferentes técnicas y procesos logísticos, los cuales permiten la optimización de los procesos de una organización, disminuyendo costos y tiempos.
 
-                    .col-12-col-md-6.text-center.ml-3
+                    .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/2_1_centros.png").img-fluid
 
         .card
@@ -69,7 +69,7 @@ include ../mixins/functions
                 img(src="assets/images/pages/ilustraciones/sistema_logistico.svg").img-fluid.col-12     
 
         .card(style="background-color:#94E3EC")
-            img(src="assets/images/pages/ilustraciones/actividades.svg" style= "margin-top: -4px").img-fluid       
+            img(src="assets/images/pages/ilustraciones/actividades.png" style= "margin-top: -4px").img-fluid       
             .col-11.col-md-8.mt-5 
                 article.custom-item.d-flex.align-items-center.flex-column.flex-md-row
 
@@ -77,8 +77,8 @@ include ../mixins/functions
 
                     .card(style=" border-color: #94E3EC").mb-0
                         .card-body(style="background-color: #94E3EC")
-                            strong Procesos de recepción:
-                            | es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía. La mercancía se puede recibir de diferentes formas, tales como:
+                            strong Procesos de recepción: 
+                            |es el primer proceso que se realiza en el flujo operacional del centro, está compuesto por la recepción y la ubicación de la mercancía. La mercancía se puede recibir de diferentes formas, tales como:
 
             .row.justify-content-center.mt-5
 
@@ -96,15 +96,15 @@ include ../mixins/functions
                             .avatar.avatar-xxl.card-avatar
                                 img(src="assets/images/pages/ilustraciones/ico2.svg").avatar-img
                             strong A granel: 
-                            |método utilizado para cierto tipo de mercancía, que por su cantidad y forma, debe ser entregado con empaques especiales, por ejemplo: el arroz, el frijol, azúcar, entre otros. 
+                            |método utilizado para cierto tipo de mercancía, que por su cantidad y forma, deben ser entregado en empaques individuales, por ejemplo: el arroz, el frijol, azúcar, entre otros. 
 
                 .col-12.col-md-3.mt-6.my-md-0
                     .card(style="border-color:#C3E7F9")
                         .card-body.text-center(style="background-color:#C3E7F9")
                             .avatar.avatar-xxl.card-avatar
                                 img(src="assets/images/pages/ilustraciones/ico3.svg").avatar-img
-                            strong En arrume:
-                             este tipo de recibo, se hace con productos en cajas o en bultos, ese es el caso del recibo del café.               
+                            strong En arrume: 
+                            |este tipo de recibo, se hace con productos en cajas o en bultos, ese es el caso del recibo del café.               
 
             .card-body
             .row.align-items-center.justify-content-center.my-5
@@ -129,12 +129,12 @@ include ../mixins/functions
                                     strong Procesos de Salida: 
                                     |está compuesto por las actividades al final del flujo dentro del centro, tales como el Picking, empaque y embarque. 
 
-                img(src="assets/images/pages/ilustraciones/actividades_secuenciales.svg").img-fluid.col-11
+            img.img-a.my-5.py-3(src="assets/images/pages/ilustraciones/actividades_secuenciales.png", style="background-color:white; border-radius:60px").img-fluid.col-11
 
 #estrategias
 .container
     .header-ecored
-        h1 1.2 Estrategias Competitivas
+        h1 1.2 Estrategias competitivas
     .header
         .card
             .card-body
@@ -143,11 +143,11 @@ include ../mixins/functions
                         p De acuerdo con lo definido por el diccionario de la Real Academia Española, la palabra estrategia significa: que es un proceso regulable, conjunto de reglas que aseguran una decisión óptima en cada momento, y en el caso de la palabra competitiva, significa: relativo a competencia rivalidad de quienes disputan una misma cosa o la pretenden. Teniendo en cuenta lo anterior, las estrategias competitivas buscan tomar decisiones acertadas en los momentos en que se requiera para lograr algo que se pretenda, lo cual sea el objeto de la estrategia misma, ya sea la participación en un mercado, el aumento de atención a nuevos clientes, la disminución de tiempos de entrega de un producto, la satisfacción de los clientes, entre muchos otros aspectos que son relevantes en una organización.
 
 
-                    .col-12-col-md-6.text-center.ml-3
-                        img(src="assets/images/pages/ilustraciones/estrategias1.svg").img-fluid
+                    .col-12.col-md-6.text-center.ml-3
+                        img(src="assets/images/pages/ilustraciones/estrategias1.png").img-fluid
 
                 .row.my-4
-                    .col-12-col-md-6.text-center.ml-3
+                    .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/estrategias2.svg").img-fluid                
                     .col-12.col-md-4
                         p.ml-3 Tal como se muestra en la anterior gráfica, y complementando las definiciones, en las estrategias se requiere una idea o un concepto con el cual un equipo de personas o de recursos, puedan trabajar para lograr un objetivo en común, el cual se define según la necesidad o las políticas de la empresa. 
@@ -157,6 +157,6 @@ include ../mixins/functions
                 .col-1.col-md-1.text-center
                      img(src="assets/images/pages/ilustraciones/comilla1.svg").img-fluid.ml-5
                 .col-10.col-md-10
-                    p.mb-0.ml-4 Dicho sistema recibe unos estímulos concretados en solicitudes y utilizando el conjunto de las informaciones patrimonio del sistema, según indican sus reglas de gestión, elabora unos resultados que son enviados al exterior (Díaz, 2013).                    
-                .col-1.col-md-1.text-center
+                    p.mb-0.ml-4 Según Karla Escalante, autora del libro Estrategias Competitivas, establece que estas son la combinación de los fines (metas) por los cuales se está esforzando la empresa y los medios (políticas) con los cuales está buscando llegar a ellos y establece un proceso de formulación que contempla identificar el sector del mercado en que se encuentra posicionada actualmente la competencia, establecer que está sucediendo en el entorno y que es lo que debería estar haciendo la empresa. Lo anterior resalta la necesidad de conocerse como empresa, su entorno y lógicamente la competencia, con el fin de definir cuál será el concepto con el cual se logrará un determinado fin, que estará relacionado con las sostenibilidad de la organización en un mercado, el cual esta tan dinámico que necesita más herramientas para agregarle valor a su operación que al final el cliente pueda percibir una experiencia diferente a la que le pueden estar ofreciendo, para satisfacer sus necesidades.                    
+                .col-1.col-md-1.text-center(style="display: flex; justify-content: end; flex-direction: column;")
                     img(src="assets/images/pages/ilustraciones/comilla2.svg").img-fluid.mt-4.mr-5
