--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -8,10 +8,10 @@ include ../mixins/functions
         .card
             .card-body
                 .row.my-4
-                    .col-12.col-md-6
+                    .col-12.col-md-5
                         p Teniendo en cuenta el dinamismo de los mercados que se mencionaba anteriormente y específicamente las empresas que están inmersas en él, les ingresan y generan gran cantidad de información relacionada con todas las partes interesadas en su actividad, ya sean proveedores, clientes, el gobierno, otras empresas y hasta la misma comunidad o sociedad que se encuentra en su entorno de acción, y cada una de estas, juega un papel importante en  el logro de los objetivos organizacionales, en la rentabilidad y su sostenibilidad, motivo por el cual se debe tratar adecuadamente todas estas entradas y salidas de información. 
 
-                    .col-12-col-md-6.text-center.ml-3
+                    .col-12.col-md-6.text-center.ml-3
                         img(src="assets/images/pages/ilustraciones/sistemas.svg").img-fluid
 
                 .row.my-5              
@@ -25,8 +25,8 @@ include ../mixins/functions
                                 p(style="color: #00223D") Una actividad transformadora y operante, concretada en un conjunto de reglas de gestión. 
                             li(style="color: #4DD0E0")    
                                 p(style="color: #00223D") Un conjunto de informaciones.     
-                    .col-12-col-md-6.text-center
-                        img(src="assets/images/pages/ilustraciones/sistemas2.svg").img-fluid   
+                    .col-12.col-md-6.text-center
+                        img(src="assets/images/pages/ilustraciones/sistemas2.png").img-fluid   
 
         .py-3(style="background-color:#D4F4F7; border-radius:9px")
             .row
@@ -43,17 +43,15 @@ include ../mixins/functions
 
     .header  
         .card
-            .card-body        
+            .card-body
+                p Esta es una forma textual de describir lo que sucede al interior de un sistema de información de una empresa, el cual funciona como la red de neuronas y venas del cuerpo humano, que constantemente recibe estímulos de diferente procedencia, los procesa y los convierte en una respuesta u acción
+                br
+                p Los sistemas de información pueden ser enfocados en diferentes aspectos o necesidades, en el mercado actual pueden encontrarse diferentes tipos, entre los más comunes están:                         
                 .row.justify-content-center.mt-2
 
                     .col-lg-6
-                        p Esta es una forma textual de describir lo que sucede al interior de un sistema de información de una empresa, el cual funciona como la red de neuronas y venas del cuerpo humano, que constantemente recibe estímulos de diferente procedencia, los procesa y los convierte en una respuesta u acción
-                        br
-                        p Los sistemas de información pueden ser enfocados en diferentes aspectos o necesidades, en el mercado actual pueden encontrarse diferentes tipos, entre los más comunes están: 
-
-                    .col-lg-6
                                 
-                        #accordionExample.accordion
+                        #accordionExample.accordion.mt-5
                             .card
                                 #headingOne.card-header(style="background: #36AFEA")
                                     p(style="margin-top: 1rem")
@@ -108,7 +106,7 @@ include ../mixins/functions
 #conceptos
 .container
     .header-ecored
-        h1 2.1 Conceptos Generales
+        h1 2.1 Conceptos generales
     .header
         .card
             .card-body
@@ -119,8 +117,8 @@ include ../mixins/functions
                         p En una organización los datos se generan en múltiples momentos de la operación, la cantidad de unidades producidas, el número de trabajadores por turno, la cantidad de pedidos despachados, el tiempo de recorrido en la entrega de un producto, el valor del inventario de la materia prima.
 
 
-                    .col-12-col-md-6.text-center.ml-3
-                        img(src="assets/images/pages/ilustraciones/conceptos.svg").img-fluid
+                    .col-12.col-md-6.text-center.ml-3
+                        img(src="assets/images/pages/ilustraciones/conceptos.png").img-fluid
         .card
             .card-body                        
 
@@ -130,8 +128,8 @@ include ../mixins/functions
 
                         p En las empresas, puedo tomar todos los datos, recopilarlos adecuadamente y convertirlos en información relevante que pueda permitir tomar decisiones de forma objetiva, por ejemplo, dada la cantidad de personas en un turno y la cantidad de unidades producidas, puedo establecer si el costo de producción por cada unidad, aumento, disminuyo o se mantuvo estable frente a la semana anterior.
 
-                    .col-12-col-md-6.text-center.ml-3
-                        img(src="assets/images/pages/ilustraciones/conceptos2.svg").img-fluid
+                    .col-12.col-md-6.text-center.ml-3
+                        img(src="assets/images/pages/ilustraciones/conceptos2.png").img-fluid
 
     .jumbotron(style="background: #CBD9E4")
         .row.justify-content-center.align.items-center
