--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -109,7 +109,7 @@ include ../mixins/functions
             .card-body
             .row.align-items-center.justify-content-center.my-5
 
-                .col-12.col-md-7 
+                .col-12.col-md-6 
 
                     article.d-flex.align-items-center.flex-column.flex-md-row
 
@@ -120,7 +120,7 @@ include ../mixins/functions
                                 |el almacenamiento tiene como fin, proteger y conservar los materiales o mercancía, en condiciones óptimas, durante un determinado espacio de tiempo, es decir con las características y atributos con los cuales ingresaron al centro y con las que el cliente las necesita para satisfacer sus necesidades.   
 
                 
-                .col-12.col-md-4
+                .col-12.col-md-5
                     article.custom-item.d-flex.align-items-center.flex-column.flex-md-row
 
                         img(src="assets/images/pages/ilustraciones/actividades3.svg").custom-item-img.my-2
@@ -154,7 +154,7 @@ include ../mixins/functions
 
         .py-3(style="background-color:#D4F4F7; border-radius:9px")
             .row
-                .col-1.col-md-1.text-center
+                .col-1.col-md-1.text-center(style="display: flex; justify-content: initial; flex-direction: column;")
                      img(src="assets/images/pages/ilustraciones/comilla1.svg").img-fluid.ml-5
                 .col-10.col-md-10
                     p.mb-0.ml-4 Según Karla Escalante, autora del libro Estrategias Competitivas, establece que estas son la combinación de los fines (metas) por los cuales se está esforzando la empresa y los medios (políticas) con los cuales está buscando llegar a ellos y establece un proceso de formulación que contempla identificar el sector del mercado en que se encuentra posicionada actualmente la competencia, establecer que está sucediendo en el entorno y que es lo que debería estar haciendo la empresa. Lo anterior resalta la necesidad de conocerse como empresa, su entorno y lógicamente la competencia, con el fin de definir cuál será el concepto con el cual se logrará un determinado fin, que estará relacionado con las sostenibilidad de la organización en un mercado, el cual esta tan dinámico que necesita más herramientas para agregarle valor a su operación que al final el cliente pueda percibir una experiencia diferente a la que le pueden estar ofreciendo, para satisfacer sus necesidades.                    
