Ajuste titulo e imagen

--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -65,7 +65,7 @@ include ../mixins/functions
                     li(style="color: #4DD0E0")    
                         p(style="color: #00223D") Alcanzar un movimiento permanente de la mercancía, con el fin de hacer más eficiente la operación. 
 
-                h1(style="color: #4DD0E0").text-center.my-5  el sistema logístico
+                h1(style="color: #4DD0E0").text-center.my-5  El sistema logístico
                 img(src="assets/images/pages/ilustraciones/sistema_logistico.svg").img-fluid.col-12     
 
         .card(style="background-color:#94E3EC")
